# Parkhaussimulation

./: CMakeLists.txt  Flussdiagramm_Queue_enqueue.drawio  README.md
.devcontainer/: devcontainer.json
.devcontainer/c/: Dockerfile
.devcontainer/vbnet/: devcontainer.json
Code/Header_Dateien/: Konfig.h  Parkhaus.h  Queue.h  Simulation.h
Code/Include/: Konfig.h  Queue.h  Simulation.h
Code/include/: Parkhaus.h
Code/src/: Konfig.c  Main.c  Queue.c  Simulation.c
Code/tests/: test_konfig.c  test_queue.c  test_simulation.c
Output/data/: auslastung.txt  schrittdaten.txt  simulation_ende.txt  test_auslastung.txt  test_simulation_ende.txt
Output/gnuplot/: plot_endergebnis.gp
docs/: Dokumentation_Dateistruktur.docx  Flussdiagramm_Queue_enqueue.drawio  Flussdiagramm_ausfuehren_simulationsschritt.drawio  Flussdiagramm_ausführen_simulationsschritt.drawio  Flussdiagramm_einlesen_und_überprüfen.drawio  Flussdiagramm_int_wert_einlesen.drawio
src/: Queue.c
